deploy: ecd8509e6baeefff49f008c890b9a8a38c08787e

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CPZWgzF7.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-C1gvQUyW.js"></script>
   </head>
 
   <body>
