deploy: 2f83c4d5e1079a145de380239b09f2f302b7e4ad

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C1gvQUyW.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CZHYncQH.js"></script>
   </head>
 
   <body>
