deploy: b085283247fb806efc77188cf511bc2f0e69eb42

--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CZHYncQH.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bmb2ONNY.js"></script>
   </head>
 
   <body>
