--- a/preview/dsr-188/react/iframe.html
+++ b/preview/dsr-188/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BVkkOip2.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-uXQRuyyR.js"></script>
   </head>
 
   <body>
