deploy: b10af59655bca19630aabfa22be5149b8bb781fe

--- a/preview/dsr-188/react/iframe.html
+++ b/preview/dsr-188/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-_4p-_CmP.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BwApkLwa.js"></script>
   </head>
 
   <body>
