--- a/preview/dsr-168/react/iframe.html
+++ b/preview/dsr-168/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CoVhx76E.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BWU5XYSf.js"></script>
   </head>
 
   <body>
