--- a/preview/sidenav-design-dev/react/iframe.html
+++ b/preview/sidenav-design-dev/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Bmb2ONNY.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-rJrL-Y3l.js"></script>
   </head>
 
   <body>
