deploy: f22d3ee6e890f28ee6319e634fe42eefdebc6022

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BJMHgK5j.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DglRr0Ax.js"></script>
   </head>
 
   <body>
