deploy: 1973c42e662342e2010df9d0904c4021aad831a2

--- a/preview/typography/iframe.html
+++ b/preview/typography/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Bo4Yv7z5.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BYxAa6rF.js"></script>
   </head>
 
   <body>
