--- a/preview/dsr-381-spacings/iframe.html
+++ b/preview/dsr-381-spacings/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DglRr0Ax.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CCuvQQR2.js"></script>
   </head>
 
   <body>
