deploy: 8e224720bbea3a80a43ab4d4f1457edba134563e

--- a/preview/typography/iframe.html
+++ b/preview/typography/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-RXMs9kH5.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-1Oo4w0VR.js"></script>
   </head>
 
   <body>
