--- a/preview/typography/iframe.html
+++ b/preview/typography/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DDivCZL1.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-tV9v78sr.js"></script>
   </head>
 
   <body>
