deploy: f0afe440a362bf5ca8465450264586973360c94a

--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CCuvQQR2.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CrbOwKsn.js"></script>
   </head>
 
   <body>
