deploy: fe111325821494eeacbaa18f0fbae089f7320783

--- a/preview/typography/iframe.html
+++ b/preview/typography/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-tV9v78sr.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DbxGOaiT.js"></script>
   </head>
 
   <body>
