--- a/preview/dsr-381/iframe.html
+++ b/preview/dsr-381/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CrbOwKsn.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Ddp3G4a-.js"></script>
   </head>
 
   <body>
