--- a/preview/typography/iframe.html
+++ b/preview/typography/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BEy314zj.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-8mxfBl0-.js"></script>
   </head>
 
   <body>
