deploy: 2d21d9b257013dbc81004642b4b44f5755fd3718

--- a/preview/typography/iframe.html
+++ b/preview/typography/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-8mxfBl0-.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DaSsZyEx.js"></script>
   </head>
 
   <body>
