deploy: 7ab53a8f150b10ecee408cc9e05ef4510674411a

--- a/preview/borders/iframe.html
+++ b/preview/borders/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C2xV5dov.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Q9xr_M0H.js"></script>
   </head>
 
   <body>
