--- a/preview/dsr-450/iframe.html
+++ b/preview/dsr-450/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C2xV5dov.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cn2EYPbQ.js"></script>
   </head>
 
   <body>
