deploy: c086bcd8631818482e020cb5ed188239c8963371

--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CN7YSGUa.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-rJrL-Y3l.js"></script>
   </head>
 
   <body>
