deploy: 0ef94bf793da25e7229d20fee1360a8c70962c97

--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-rJrL-Y3l.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CNjjGfBr.js"></script>
   </head>
 
   <body>
