--- a/preview/dsr-139/react/iframe.html
+++ b/preview/dsr-139/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BAGhD3IF.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B7lItl5C.js"></script>
   </head>
 
   <body>
