--- a/preview/dsr-391/react/iframe.html
+++ b/preview/dsr-391/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C7Q_wjFl.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DlTQSgRL.js"></script>
   </head>
 
   <body>
