--- a/preview/contribution/iframe.html
+++ b/preview/contribution/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-cApkSneR.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BtRwvrGn.js"></script>
   </head>
 
   <body>
