deploy: 8dd2764a33f7f3ff6af28ab0c6664da43bd23217

--- a/preview/kit-migration-general/iframe.html
+++ b/preview/kit-migration-general/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Cy0QXMJi.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DoUTap_s.js"></script>
   </head>
 
   <body>
