deploy: 7c5d24fbae184e67bb291c6484132cf426126abf

--- a/preview/page-valeurs/iframe.html
+++ b/preview/page-valeurs/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CASEWSjO.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BE6p-G3O.js"></script>
   </head>
 
   <body>
