--- a/preview/dsr-463/iframe.html
+++ b/preview/dsr-463/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BRJO2b30.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CioOm3fR.js"></script>
   </head>
 
   <body>
