--- a/preview/dsr-381/iframe.html
+++ b/preview/dsr-381/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C50lM_3Z.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CkILsuDW.js"></script>
   </head>
 
   <body>
