--- a/preview/devs-get-started/iframe.html
+++ b/preview/devs-get-started/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CkILsuDW.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-gvfYNKwb.js"></script>
   </head>
 
   <body>
