deploy: 47ee62e4714c090ebcb6e73949ad798d3df9f0f5

--- a/preview/devs-get-started/iframe.html
+++ b/preview/devs-get-started/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DV7tBQN3.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-zbp6NvUP.js"></script>
   </head>
 
   <body>
