--- a/preview/dsr-381/iframe.html
+++ b/preview/dsr-381/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DuqTYbUV.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B4exdKOx.js"></script>
   </head>
 
   <body>
