deploy: 8d8f93b6d3d98dba4d8faf7be4453bf89e7df9d1

--- a/preview/devs-get-started/iframe.html
+++ b/preview/devs-get-started/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-zbp6NvUP.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CeVBkVl2.js"></script>
   </head>
 
   <body>
