deploy: 872c266db954d60c97944b85bec54c0ab623bf50

--- a/preview/dsr-381/iframe.html
+++ b/preview/dsr-381/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B4exdKOx.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BbkObHYZ.js"></script>
   </head>
 
   <body>
