deploy: 0a36e15b761c22bf163b32950811eb487d440b55

--- a/react/iframe.html
+++ b/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-eDcm9CbZ.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DfUv1Jr3.js"></script>
   </head>
 
   <body>
