--- a/preview/dsr-152/iframe.html
+++ b/preview/dsr-152/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CAI4GvRo.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bki2rBgW.js"></script>
   </head>
 
   <body>
