--- a/preview/dsr-139/react/iframe.html
+++ b/preview/dsr-139/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-D048kxEk.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-C3PqQeYW.js"></script>
   </head>
 
   <body>
