--- a/preview/dsr-152/react/iframe.html
+++ b/preview/dsr-152/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-KXrPhry1.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-lg8o08JX.js"></script>
   </head>
 
   <body>
