deploy: e53f71cfd5e35da4c9c94cc5ff78b81d4be07f37

--- a/preview/dsr-117/react/iframe.html
+++ b/preview/dsr-117/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Cl_mwUjJ.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BZTy4ocX.js"></script>
   </head>
 
   <body>
