--- a/preview/dsr-117/react/iframe.html
+++ b/preview/dsr-117/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BZTy4ocX.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-C5ajhPTZ.js"></script>
   </head>
 
   <body>
