--- a/preview/dsr-117/iframe.html
+++ b/preview/dsr-117/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-D0r0wUE_.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BNHGkbdD.js"></script>
   </head>
 
   <body>
