--- a/preview/dsr-229/iframe.html
+++ b/preview/dsr-229/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BiFj_Y8J.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D3udNYTX.js"></script>
   </head>
 
   <body>
