deploy: c952a8351e9d3f11d594456d09fe0a83408c0bce

--- a/preview/dsr-152/react/iframe.html
+++ b/preview/dsr-152/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-lg8o08JX.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BMgMRuZV.js"></script>
   </head>
 
   <body>
