deploy: 03dec60d4e8efb329e9c42b94f29a0613607b8ee

--- a/preview/figma-mcp-experience/react/iframe.html
+++ b/preview/figma-mcp-experience/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-ClxkVREV.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cmm1x8Fg.js"></script>
   </head>
 
   <body>
