deploy: bfe98e7bbac4bdedd18165be3ace562cbd89c55e

--- a/preview/figma-mcp-experience/react/iframe.html
+++ b/preview/figma-mcp-experience/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CCYP6O29.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CV_NCi8E.js"></script>
   </head>
 
   <body>
