--- a/preview/figma-mcp-experience/react/iframe.html
+++ b/preview/figma-mcp-experience/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CV_NCi8E.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DJ_jCc98.js"></script>
   </head>
 
   <body>
