--- a/preview/figma-mcp-experience/react/iframe.html
+++ b/preview/figma-mcp-experience/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DCZEGw9C.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bb1Hd_sN.js"></script>
   </head>
 
   <body>
