--- a/iframe.html
+++ b/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CQ1AYr3y.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Ds9Oc2aL.js"></script>
   </head>
 
   <body>
