deploy: 324dd0ade1f9810e575dfd8ac8f4953fb80d867c

--- a/preview/dsr-204/react/iframe.html
+++ b/preview/dsr-204/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-SU8rPPiX.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DPnQ2oO0.js"></script>
   </head>
 
   <body>
