--- a/preview/dsr-506/react/iframe.html
+++ b/preview/dsr-506/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-D3R_fgSl.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BhIQDCTd.js"></script>
   </head>
 
   <body>
