--- a/preview/dsr-466/react/iframe.html
+++ b/preview/dsr-466/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DKiJ4lrS.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B1o9Swly.js"></script>
   </head>
 
   <body>
