deploy: 604dee5c51be83b44cd39218da01d3f2cc67f90c

--- a/preview/dsr-466/react/iframe.html
+++ b/preview/dsr-466/react/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B1o9Swly.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BUHRSpeO.js"></script>
   </head>
 
   <body>
